chore: fix collapse transition

--- a/src/styles/themes/theme-default/src/motion/collapse.styl
+++ b/src/styles/themes/theme-default/src/motion/collapse.styl
@@ -1,4 +1,2 @@
-.kd-motion-collapse
-    overflow hidden
-    &-active
-        transition height $-animation-duration-base $-ease-in-out, opacity $-animation-duration-base $-ease-in-out
+.kd-collapse-transition
+    transition height $-animation-duration-base $-ease-in-out, padding-top $-animation-duration-base $-ease-in-out, padding-bottom $-animation-duration-base $-ease-in-out
