--- a/src/styles/themes/theme-default/src/motion/mixins.styl
+++ b/src/styles/themes/theme-default/src/motion/mixins.styl
@@ -1,7 +1,7 @@
 // Animation
 $-ease-out          := cubic-bezier(0.215, 0.61, 0.355, 1)
 $-ease-in           := cubic-bezier(0.55, 0.055, 0.675, 0.19)
-$-ease-in-out       := cubic-bezier(0.645, 0.045, 0.355, 1)
+$-ease-in-out       := cubic-bezier(0.25, 0.1, 0.25, 0.1)
 $-ease-out-back     := cubic-bezier(0.12, 0.4, 0.29, 1.46)
 $-ease-in-back      := cubic-bezier(0.71, -0.46, 0.88, 0.6);
 $-ease-in-out-back  := cubic-bezier(0.71, -0.46, 0.29, 1.46)
